# Deploying_and_managing_distributed_systems_for_analyzing_Big_Data

./: .editorconfig  README.md
desarrollo/: CMakeLists.txt  Dockerfile  build_and_push.bat  data_analysis.ipynb
desarrollo/Cluster_final/: creat_subs.sh  dds-apps-final-1.yaml  dds-monitor-final.yaml  dds-router-final.yaml  monitoring-stack-final.yaml
desarrollo/Cluster_final/data/: air_quality_report.csv  monitor_report.csv
desarrollo/Cluster_final/data/175_ms/: air_quality_report.csv  monitor_report.csv
desarrollo/Cluster_final/data/200_ms/: air_quality_report.csv  monitor_report.csv
desarrollo/Cluster_final/data/250_ms/: air_quality_report.csv  monitor_report.csv
desarrollo/Cluster_final/data/25_ms/: air_quality_report.csv  monitor_report.csv
desarrollo/Cluster_mid/: creat_subs.sh  dds-apps-aggregator-1.yaml  dds-apps-aggregator-2.yaml  dds-discovery-server-mid.yaml  dds-monitor-mid.yaml  dds-router-mid.yaml  exec_pruebas.sh  sniffer.yaml
desarrollo/Cluster_mid/data/: air_quality_raw.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Cluster_mid/data/175_ms/: analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Cluster_mid/data/200_ms/: analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Cluster_mid/data/250_ms/: analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Cluster_mid/data/25_ms/: analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Cluster_pub1/: creat_pubs.sh  dds-apps-publisher-1.yaml  dds-apps-publisher-2.yaml  dds-apps-publisher-3.yaml  dds-discovery-server-pub.yaml  dds-monitor-pub.yaml  dds-router-pub.yaml  exec_pruebas.sh  sniffer.yaml
desarrollo/Cluster_pub1/data/: calair_tiemporeal_ult.csv  monitor_report.csv
desarrollo/Cluster_pub1/data/175_ms/: monitor_report.csv
desarrollo/Cluster_pub1/data/200_ms/: monitor_report.csv
desarrollo/Cluster_pub1/data/250_ms/: monitor_report.csv
desarrollo/Cluster_pub1/data/25_ms/: monitor_report.csv
desarrollo/Monolithic/: creat_subs.sh  dds-apps-aggregator-1.yaml  dds-apps-aggregator-2.yaml  dds-apps-final-1.yaml  dds-apps-publisher-1.yaml  dds-apps-publisher-2.yaml  dds-apps-publisher-3.yaml  dds-discovery-server-final.yaml  dds-monitor-mono.yaml  dds-spy.yaml  measure_loss.sh
desarrollo/Monolithic/data/: air_quality_raw.csv  air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/100_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/125_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/150_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/15_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/175_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/200_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/250_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/50_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/55_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/60_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/data/75_ms/: air_quality_report.csv  analysis_aggregator_gaps.csv  intermediate_store_gaps.csv  monitor_report.csv
desarrollo/Monolithic/results/: medidas.txt
desarrollo/idl/: AirQualityStats.idl  AirSample.idl
desarrollo/monitor_img/: Dockerfile  start.sh
desarrollo/profiles/: publisher_plain.xml  publisher_secure.xml  subscriber_plain.xml  subscriber_secure.xml
desarrollo/src/: csv_analysis_aggregator.cpp  csv_final_agg_subscriber.cpp  csv_intermediate_store.cpp  csv_publisher.cpp  csv_subscriber.cpp  monitor.cpp  monitor.hpp
pkis/: governance.smime  governance.xml
pkis/identity_ca/: aggregation_identity_req.pem  client_identity_req.pem  identity_ca_cert.pem  index.txt  index.txt.old  intermediate_store_identity_req.pem  maincaconf.cnf  monitor_identity_req.pem  publisher_identity_req.pem  router_final_identity_req.pem  router_mid_identity_req.pem  router_pub_identity_req.pem  sensor_mag12_identity_req.pem  sensor_mag20_identity_req.pem  sensor_mag30_identity_req.pem  server_final_identity_req.pem  server_mid_identity_req.pem  server_pub_identity_req.pem  subscriber_identity_req.pem
pkis/permissions_ca/: permissions_ca_cert.pem  permissions_ca_key.pem
pkis/permissions_smime/: aggregation_permissions.smime  intermediate_store_permissions.smime  monitor_permissions.smime  publisher_permissions.smime  router_final_permissions.smime  router_mid_permissions.smime  router_pub_permissions.smime  sensor_mag12_permissions.smime  sensor_mag20_permissions.smime  sensor_mag30_permissions.smime  server_final_permissions.smime  server_mid_permissions.smime  server_pub_permissions.smime  subscriber_permissions.smime
pkis/permissions_xml/: aggregation_permissions.xml  intermediate_store_permissions.xml  monitor_permissions.xml  publisher_permissions.xml  router_final_permissions.xml  router_mid_permissions.xml  router_pub_permissions.xml  sensor_mag12_permissions.xml  (+6 more)
(+37 files in other folders)
